--- a/src/index.html
+++ b/src/index.html
@@ -257,6 +257,15 @@
                 href="mailto:455801665@qq.com">455801665@qq.com</a>
         </p>
     </section>
+    <section class="skills">
+        <h2>教育背景</h2>
+        <p>
+                <span>
+                   2015.7-2019.7 | 江西应用科技学院 | 物联网工程 | 本科
+                </span>
+        </p>
+
+    </section>
     <section class="projects">
         <h2>项目经历</h2>
         <ol>
@@ -304,7 +313,7 @@
                     <h3>前航网站</h3>
                     <span>
                             <a href="https://github.com/MRhuo857/nav">源码链接</a>
-                            <a href="https://mrhuo857.github.io/nav/dist/index.html">项目预览</a>
+                            <a href="http://huo-meng.gitee.io/nav/src/index.html">项目预览</a>
                         </span>
                 </header>
                 <p>
@@ -320,8 +329,8 @@
                 <header>
                     <h3>会动的皮卡丘</h3>
                     <span>
-                            <a href="https://github.com/MRhuo857/Pikachu--2">源码链接</a>
-                            <a href="https://mrhuo857.github.io/Pikachu--2/src/test.html">项目预览</a>
+                            <a href="https://gitee.com/huo-meng/Pikachu">源码链接</a>
+                            <a href="http://huo-meng.gitee.io/pikachu/src/index.html">项目预览</a>
                         </span>
                 </header>
                 <p>
@@ -388,6 +397,15 @@
                 <span>
                     <a href="https://github.com/MRhuo857">我的Github地址</a>
                 </span>
+        </p>
+    </section>
+    <section class="skills">
+        <h2>工作经历</h2>
+        <p>
+             2019.5-2020.3 杭州帮客融科技有限公司 设计职位
+        </p>
+        <p>
+            2020.5-至今   杭州赫伦电子商务有限公司 设计职位
         </p>
     </section>
 
