更改皮卡丘版本

--- a/src/index.html
+++ b/src/index.html
@@ -329,8 +329,8 @@
                 <header>
                     <h3>会动的皮卡丘</h3>
                     <span>
-                            <a href="https://gitee.com/huo-meng/Pikachu">源码链接</a>
-                            <a href="http://huo-meng.gitee.io/pikachu/src/index.html">项目预览</a>
+                            <a href="https://gitee.com/huo-meng/Pikachu--2">源码链接</a>
+                            <a href="http://huo-meng.gitee.io/pikachu--2/src/test.html">项目预览</a>
                         </span>
                 </header>
                 <p>
