--- a/src/index.html
+++ b/src/index.html
@@ -361,8 +361,8 @@
                 <header>
                     <h3>简易画板</h3>
                     <span>
-                            <a href="https://github.com/MRhuo857/canvs-demo-1">源码链接</a>
-                            <a href="https://mrhuo857.github.io/canvs-demo-1/index.html">项目预览</a>
+                            <a href="https://gitee.com/huo-meng/canvs-demo-1">源码链接</a>
+                            <a href="http://huo-meng.gitee.io/canvs-demo-1/">项目预览</a>
                         </span>
                 </header>
                 <p>我在学习 <strong>Canvas</strong> 时做的一个小作品</p>
