--- a/src/index.html
+++ b/src/index.html
@@ -347,8 +347,8 @@
     </section>
 
 
-    <section class="openSource">
-        <h2>开源项目</h2>
+    <section class="openSource" >
+        <h2 class="page2">开源项目</h2>
         <ul>
             <li>
                 <header>
