--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="zh">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>我的简历</title>
+    <title>霍猛简历</title>
     <style>
         * {
             box-sizing: border-box;
@@ -29,6 +30,7 @@
         body {
             margin: 0;
         }
+
         .page2 {
             page-break-before: always;
             margin-top: 30px;
@@ -244,173 +246,189 @@
 </head>
 
 <body>
-<article>
-    <section class="bio">
-        <h1>霍猛</h1>
-        <img src="./images/1.png.jpg" alt="" width="100px">
-        <p>
-            男 | 25岁 | 前端工程师 | 杭州
-        </p>
-        <p>
-            手机：<a href="tel:15727677659">15727677659</a> | 微信 ：15727677659 | 邮箱：<a
-                href="mailto:455801665@qq.com">455801665@qq.com</a>
-        </p>
-    </section>
-    <section class="skills">
-        <h2>教育背景</h2>
-        <p>
+    <article>
+        <section class="bio">
+            <h1>霍猛</h1>
+            <img src="./images/1.png.jpg" alt="" width="100px">
+            <p>
+                男 | 25岁 | 前端工程师 | 杭州
+            </p>
+            <p>
+                手机：<a href="tel:15727677659">15727677659</a> | 微信 ：15727677659 | 邮箱：<a
+                    href="mailto:455801665@qq.com">455801665@qq.com</a>
+            </p>
+        </section>
+        <section class="skills">
+            <h2>教育背景</h2>
+            <p>
                 <span>
-                   2015.7-2019.7 | 江西应用科技学院 | 物联网工程 | 本科
+                    2015.7-2019.7 | 江西应用科技学院 | 物联网工程 | 本科
                 </span>
-        </p>
+            </p>
 
-    </section>
-    <section class="projects">
-        <h2>项目经历</h2>
-        <ol>
-            <li>
-                <header>
-                    <h3>极简UI-从零开始的UI组件库</h3>
-                    <span>
-                            <a href="https://github.com/MRhuo857/gulu">源码链接</a>
-                            <a href="http://huo-meng.gitee.io/gulu">项目预览</a>
-                        </span>
-                </header>
-                <p><span style="font-weight:600;"> 项目介绍：</span> 该项目是以Ant Design、Element
-                    UI为参考，做的一套基于<strong>Vue</strong>的UI组件库，目前组件包括：Button、Grid、Input、Layout、Popover、Tabs、Toast、Collapse。
-                    每个组件经历从<strong>需求分析</strong>到<Strong>Mocha单元测试</Strong>，并用TravisCI实现持续集成，最终以
-                    <strong>VuePress为基础</strong>做开发文档，完成该项目让我对Vue的使用更加熟悉，同时提升了自己对<strong>前端工程化，以及单元测试的理解</strong>。
-                </p>
-                <p> <span style="font-weight:600;">技术：</span>
-                    <strong>Vue.js+VuePress+SCSS+ES6+Mocha+TravisCI,等。</strong>
-                </p>
-            </li>
-            <li>
-                <header>
-                    <h3>蜗牛记账</h3>
-                    <span>
-                            <a href="https://juejin.im/post/6866985669194055687">蜗牛记账博客</a>
-                            <a href="https://github.com/MRhuo857/morney">源码链接</a>
-                        </span>
-                </header>
-                <p>
-                    <span style="font-weight: 600;">项目介绍：</span>
-                    蜗牛记账是一款极简的记账产品，是一款基于Vue、TypeScript、Vuex、VueRouter实现的单页面应用。项目以Vue CLI为基础，创建项目模板。
-                    通过<strong>Vue Router</strong>实现<strong>路由的跳转</strong>，通过<strong>Vuex</strong>实现状态管理。
-                    并以<strong>博客</strong>的形式记录当时遇到的问题。
-                </p>
-                <p> <span style="font-weight:bold;">技术：</span>
-                    <strong>Vue 2 + TypeScript + Vue Router + Vuex</strong>
-                </p>
-                <p style="font-weight: 600;"> 项目预览：扫码体验</p>
-                <p>
-                    <img src="./images/2.png.png" alt="" style="width: 200px;">
-                </p>
-            </li>
-            <li>
-                <header>
-                    <h3>前航网站</h3>
-                    <span>
-                            <a href="https://github.com/MRhuo857/nav">源码链接</a>
-                            <a href="http://huo-meng.gitee.io/nav/src/index.html">项目预览</a>
-                        </span>
-                </header>
-                <p>
-                    <span style="font-weight: 600;">项目介绍：</span>
-                    该网站是我在学习初期，基于<strong>jQuery、CSS 布局、媒体查询</strong> 制作的一个极简的导航网址。同时支持PC和移动端。
-                </p>
-                <p>
-                    <span style="font-weight: 600;">技术：</span>
-                    <strong>jQuery、CSS 布局、媒体查询VG、Symbols、iconfont.cn、阻止冒泡</strong>
-                </p>
-            </li>
-            <li>
-                <header>
-                    <h3>会动的皮卡丘</h3>
-                    <span>
-                            <a href="https://gitee.com/huo-meng/Pikachu--2">源码链接</a>
-                            <a href="http://huo-meng.gitee.io/pikachu--2/src/test.html">项目预览</a>
-                        </span>
-                </header>
-                <p>
-                    <span style="font-weight: 600;">项目介绍：</span>
-                    这是一个好玩的，有趣的皮卡丘，主要用于理解<strong>css布局</strong>、<strong>伪元素的使用</strong>、<strong>transform</strong>
-                    的使用方法。
-                </p>
-                <p>
-                    <span style="font-weight: 600;">技术：</span>
-                    <strong>jQuery、CSS 布局、媒体查询VG</strong>
-                </p>
-            </li>
-        </ol>
-    </section>
-
-
-    <section class="openSource" >
-        <h2 class="page2">开源项目</h2>
-        <ul>
-            <li>
-                <header>
-                    <h3>手写 DOM 库</h3>
-                    <a href="https://github.com/MRhuo857/dom-demo-1">源码链接</a>
-                </header>
-                <p>实现了元素选择、元素创建、<strong>事件委托</strong>、滑动手势等常见功能</p>
-            </li>
-            <li>
-                <header>
-                    <h3>简易画板</h3>
-                    <span>
-                            <a href="https://gitee.com/huo-meng/canvs-demo-1">源码链接</a>
-                            <a href="http://huo-meng.gitee.io/canvs-demo-1/">项目预览</a>
-                        </span>
-                </header>
-                <p>我在学习 <strong>Canvas</strong> 时做的一个小作品</p>
-            </li>
-        </ul>
-    </section>
-
-    <section class="skills">
-        <h2>技能</h2>
-        <ul>
-            <li>熟悉使用CSS/SCSS、文档流、盒模型、flex</li>
-            <li>熟悉页面制作技巧，能将设计稿<strong>完美还原</strong> </li>
-            <li>熟悉<strong>前后端分离</strong>技术，包括 AJAX、跨域、原型链、gi前端路由、Cookie、Session 等</li>
-            <li>熟练掌握 <strong>Vue全家桶</strong>的使用，包括 VueCli、VueRouter、Vuex 等</li>
-
-            <!-- <li>熟练掌握 React全家桶的使用，包括 create-react-app、ReactRouter、Redux 等</li> -->
-            <li>熟悉 <strong>JavaScript、S6</strong> 包括 let / Promise / await / 析构赋值</li>
-            <li>了解 <strong>TypeScript</strong> 的使用，我的项目就是 TS 实现的</li>
-            <li>了解 <strong>Webpack 的配置和优化</strong></li>
-            <li>熟悉<strong>Git</strong>的常用操作</li>
-            <li>CET-4,能够阅读英文文档</li>
-        </ul>
-    </section>
-    <section class="skills">
-        <h2>个人链接</h2>
-        <p>
+        </section>
+        <section class="skills">
+            <h2>个人链接</h2>
+            <p>
                 <span>
-                    <a href="https://juejin.im/user/4476867081158087/posts">我的个人博客</a>
+                    我的个人<a style="color: #ff6600" target="_blank" href="https://juejin.im/user/4476867081158087/posts">博客</a>,目前已有30多篇，持续更新中...
                 </span>
-        </p>
-        <p>
+            </p>
+            <p>
                 <span>
-                    <a href="https://github.com/MRhuo857">我的Github地址</a>
+                   我的 <a style="color: #ff6600" target="_blank" href="https://github.com/MRhuo857">Github</a>主页
                 </span>
-        </p>
-    </section>
-    <section class="skills">
-        <h2>工作经历</h2>
-        <p>
-             2019.5-2020.3 杭州帮客融科技有限公司 设计职位
-        </p>
-        <p>
-            2020.5-至今   杭州赫伦电子商务有限公司 设计职位
-        </p>
-    </section>
+            </p>
+        </section>
+        <section class="projects">
+            <h2>项目经历</h2>
+            <ol>
+                <li>
+                    <header>
+                        <h3>极简UI-从零开始的UI组件库</h3>
+                        <span>
+                            <a target="_blank" href="https://github.com/MRhuo857/gulu">源码链接</a>
+                            <a target="_blank" href="http://huo-meng.gitee.io/gulu">项目预览</a>
+                        </span>
+                    </header>
+                    <p><span style="font-weight:600;"> 项目介绍：</span> 该项目是以Ant Design、Element
+                        UI为参考，做的一套基于<strong>Vue</strong>的UI组件库，目前组件包括：Button、Grid、Input、Layout、Popover、Tabs、Toast、Collapse。
+                        每个组件经历从<strong>需求分析</strong>到<Strong>Mocha单元测试</Strong>，并用TravisCI实现持续集成，最终以
+                        <strong>VuePress为基础</strong>做开发文档，完成该项目让我对Vue的使用更加熟悉，同时让自己对<strong>前端工程化，以及单元测试有了进一步的理解</strong>。
+                    </p>
+                    <p> <span style="font-weight:600;">技术：</span>
+                        <strong>Vue.js+VuePress+SCSS+ES6+Mocha+TravisCI,等。</strong>
+                    </p>
+                </li>
+                <li>
+                    <header>
+                        <h3>蜗牛记账—Vue版本</h3>
+                        <span>
+                            <a target="_blank" href="https://juejin.im/post/6866985669194055687">博客</a>
+                            <a target="_blank" href="https://github.com/MRhuo857/morney">源码链接</a>
+                            <a target="_blank" href="https://huo-meng.gitee.io/morney-website/#/money">效果预览</a>
+                        </span>
+                    </header>
+                    <p>
+                        <span style="font-weight: 600;">项目介绍：</span>
+                        蜗牛记账是一款根据自身需求出发的极简的记账产品，基于Vue、TypeScript、Vuex、VueRouter，webpack实现的单页面应用。项目以Vue CLI为脚手架搭建。
+                        通过<strong>Vue Router</strong>实现路由跳转，通过<strong>Vuex</strong>进行状态管理。
+                        并将开发中遇到的问题以<strong> <a target="_blank" href="https://juejin.im/post/6866985669194055687"
+                                style="color: #ff6600">博客形式记录下来</a></strong>。
+                    </p>
+                    <p> <span style="font-weight:bold;">技术：</span>
+                        <strong>Vue 2 + TypeScript + Vue Router +Vue CLI</strong>
+                    </p>
+                </li>
+                <li>
+                    <header>
+                        <h3>蜗牛记账—React版本</h3>
+                        <span>
 
-</article>
+                            <a target="_blank" href="https://gitee.com/huo-meng/morney-1">源码链接</a>
+                            <a target="_blank" href="https://huo-meng.gitee.io/morney-1-website">效果预览</a>
+                        </span>
+                    </header>
+                    <p>
+                        <span style="font-weight: 600;">项目介绍：</span>
+                        蜗牛记账是一款根据自身需求出发的极简的记账产品，React、ReactRouter、自定义Hooks、webpack、TypeScript,实现的极简主义记账应用。
+                        该项目让我对React,SVG Icon,Hooks有了一定的理解，我讲这些理解记录到<strong>博客</strong>上。
+                    </p>
+                    <p> <span style="font-weight:bold;">技术：</span>
+                        <strong>React + ReactRouter + webpack + hooks</strong>
+                    </p>
+                </li>
+                <li>
+                    <header>
+                        <h3>前航网站</h3>
+                        <span>
+                            <a target="_blank" href="https://github.com/MRhuo857/nav">源码链接</a>
+                            <a target="_blank" href="http://huo-meng.gitee.io/nav/src/index.html">项目预览</a>
+                        </span>
+                    </header>
+                    <p>
+                        <span style="font-weight: 600;">项目介绍：</span>
+                        该网站是我在学习初期，基于<strong>jQuery、CSS 布局、媒体查询</strong> 制作的一个极简的导航网址。同时支持PC和移动端。
+                    </p>
+                    <p>
+                        <span style="font-weight: 600;">技术：</span>
+                        <strong>jQuery、CSS 布局、媒体查询VG、Symbols、iconfont.cn、阻止冒泡</strong>
+                    </p>
+                </li>
+                <li>
+                    <header>
+                        <h3>会动的皮卡丘</h3>
+                        <span>
+                            <a target="_blank" href="https://gitee.com/huo-meng/Pikachu--2">源码链接</a>
+                            <a target="_blank" href="http://huo-meng.gitee.io/pikachu--2/src/test.html">项目预览</a>
+                        </span>
+                    </header>
+                    <p>
+                        <span style="font-weight: 600;">项目介绍：</span>
+                        这是一个好玩的，有趣的皮卡丘，主要用于理解<strong>css布局</strong>、<strong>伪元素的使用</strong>、<strong>transform</strong>
+                        的使用方法。
+                    </p>
+                    <p>
+                        <span style="font-weight: 600;">技术：</span>
+                        <strong>jQuery、CSS 布局、媒体查询VG</strong>
+                    </p>
+                </li>
+            </ol>
+        </section>
 
-<script src="./main.js"></script>
+
+        <section class="openSource">
+            <h2 class="page2">开源项目</h2>
+            <ul>
+                <li>
+                    <header>
+                        <h3>手写 DOM 库</h3>
+                        <a target="_blank" href="https://github.com/MRhuo857/dom-demo-1">源码链接</a>
+                    </header>
+                    <p>实现了元素选择、元素创建、<strong>事件委托</strong>、滑动手势等常见功能</p>
+                </li>
+                <li>
+                    <header>
+                        <h3>简易画板</h3>
+                        <span>
+                            <a target="_blank" href="https://gitee.com/huo-meng/canvs-demo-1">源码链接</a>
+                            <a target="_blank" href="http://huo-meng.gitee.io/canvs-demo-1/">项目预览</a>
+                        </span>
+                    </header>
+                    <p>我在学习 <strong>Canvas</strong> 时做的一个小作品</p>
+                </li>
+            </ul>
+        </section>
+
+        <section class="skills">
+            <h2>技能</h2>
+            <ul>
+                <li>熟悉使用CSS/SCSS、文档流、盒模型、flex</li>
+                <li>熟悉<strong>前后端分离</strong>技术，包括 AJAX、跨域、原型链、git前端路由、Cookie、Session 等</li>
+                <li>熟练 <strong>Vue全家桶</strong>的使用，包括 VueCli、VueRouter、Vuex 等</li>
+                <li>熟练 <strong>React技术栈</strong>的使用，包括 TypeScript / React / Hooks / LocalStorage / React Router等</li>
+                <li>熟悉 <strong>JavaScript、S6</strong> 包括 let / Promise / await / 析构赋值</li>
+                <li>了解 <strong>TypeScript</strong> 的使用，我的项目就是 TS 实现的</li>
+                <li>了解 <strong>Webpack 的配置和优化</strong></li>
+                <li>熟悉<strong>Git</strong>的常用操作</li>
+                <li>熟悉<strong>模块化，工程化</strong>的开发</li>
+                <li><strong>英语四级</strong></li>
+            </ul>
+        </section>
+
+        <section class="skills">
+            <h2>工作经历</h2>
+            <p>
+                2019.5-2020.3 杭州帮客融科技有限公司 设计职位
+            </p>
+            <p>
+                2020.5-至今 杭州赫伦电子商务有限公司 设计职位
+            </p>
+        </section>
+
+    </article>
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
